# archivement-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: archivement-cicd.yml
app/: main.py
app/core/: awsconfig.py
app/core/config/: awsconfig.py  serverconfig.py
app/core/config/middleware/: corsconfg.py
app/core/http/response/: http_response.py
app/core/version/: app_version.py
app/domain/: base.py
app/domain/image/: imagecontroller.py
app/domain/poster/: postercontroller.py  posterservice.py
app/domain/poster/dto/: post_poster.py
app/hidden/: aws_access_config.json
app/test/: base.py
app/test/testcode/: awsconfigTest.py
app/util/: id_generator.py  pil2byte.py  poster_generator.py  qr_util.py
resources/static/templates/: poster.html
test/testcode/: awsconfigTest.py
