[tool.poetry]
name = "archivement-server"
version = "0.0.1"
description = "Archivement Studio Server"
authors = ["Changmin Kim <ckd29672@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.102.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
