[tool.poetry]
name = "archivement-server"
version = "0.0.1"
description = "Archivement Studio Server"
authors = ["Changmin Kim <ckd29672@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.102.0"
uvicorn = "^0.23.2"
fastapi-admin = "^1.0.4"
starlette-admin = "^0.11.1"
boto3 = "^1.28.45"
numpy = "1.25.2"
opencv-python = "^4.8.0.76"
pillow = "^10.0.1"
jinja2 = "^3.1.2"
qrcode = "^7.4.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
